--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -25,7 +25,7 @@
 
         <% if ['Code','Task','Design','Hackathon'].include?(@challenge.challenge_type) %>
           <p>Your submission will be judged by a panel of peers based upon <%= link_to 'this criteria', scorecard_challenge_path(@challenge) %>.  If you 
-            would like to request an extension, please read <a href="http://community.cloudspokes.com/cloudspokes/topics/can_challenge_deadlines_be_extended_for_more_time">Can challenge deadlines be extended for more time?</a> on our FAQ. We do not want to grant extensions 
+            would like to request an extension, please read <a href="/forums#/discussion/21/can-challenge-deadlines-be-extended-for-more-time">Can challenge deadlines be extended for more time?</a> on our FAQ. We do not want to grant extensions 
             unless there is a valid reason.</p> 
         <% end %>        
 
