--- a/app/views/challenges/_right_admin.html.erb
+++ b/app/views/challenges/_right_admin.html.erb
@@ -1,11 +1,7 @@
 <% if current_user && current_user.challenge_admin?(challenge) %>
-<%
-=begin
 <h2>ADMINISTRATION</h2>
 <p>
-  <a href="#">View submissions</a><br/>
-  <a href="#">Edit this challenge</a>
+	<%= link_to 'View all submissions files', submissions_challenge_path %><br/>
+	<%= link_to 'Score submissions', outstanding_reviews_path %><br/>
 </p>
-=end 
-%>
 <% end %>
