--- a/app/views/challenges/submissions.html.erb
+++ b/app/views/challenges/submissions.html.erb
@@ -3,9 +3,12 @@
 <div class="content-wrapper">
     <div class="container">
 
-    <div class="title"><h1>ALL SUBMISSIONS</h1></div>
+    <div class="title"><h1>ALL SUBMISSION FILES</h1></div>
     <div class="content">
-    	<% @challenge.submission_deliverables.each do |deliverable| %>
+        <% if @deliverables.empty? %>
+            <div align="center"><strong>No files found for this challenge.</strong></div>
+        <% end %>
+    	<% @deliverables.each do |deliverable| %>
         <div class="well">
             Member: <%= link_to deliverable.username, member_path(deliverable.username) %><br/>
             Type: <%= deliverable.type %> - <%= link_to deliverable.url, deliverable.url, :target => '_blank' %><br/>
