removed code for now

--- a/app/views/challenges/_right_admin.html.erb
+++ b/app/views/challenges/_right_admin.html.erb
@@ -1,7 +1,1 @@
-<% if current_user && current_user.challenge_admin?(challenge) %>
-<h2>ADMINISTRATION</h2>
-<p>
-	<%= link_to 'View all submissions files', submissions_challenge_path %><br/>
-	<%= link_to 'Score submissions', outstanding_reviews_path %><br/>
-</p>
-<% end %>
+<!-- blank -->
