--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,8 +3,39 @@
 <div class="content-wrapper">
     <div class="container">
 
-        <div class="title"><h1>SIGN UP</h1></div>
-        Click the Register above button to get started.
+        <div class="title"><h1>WELCOME TO CLOUDSPOKES</h1></div>
+
+        <div class="row-fluid">
+            <div class="span6">
+							<p><br/>CloudSpokes is a unique developer community, focused on using APIs, mobile technologies and public cloud platforms to build and deliver enterprise class solutions! Compete in development challenges for cash, prizes and bragging rights and learn new skills. <a href="#register-modal" data-toggle="modal">Register to get started</a> or <a href="/how-it-works-members">see how the process works.</a></p>
+							<p>CloudSpokes is the first developer community that matches the cloud with the crowd - a true market where businesses tap into skills and pay for results (vs. effort), and where developers get access to a new world of opportunity with the cloud.</p>
+            </div>        	
+            <div class="span6">
+            	  <div class="title" style="margin:0px"><h1>FEATURED MEMBER</h1></div>
+                <div class="placement well">
+                  <%= image_tag(@platform_stats['featured_member_pic'], :width => '82x82', :class => 'pull-left photo') %>
+                  <%= link_to @platform_stats['featured_member_username'], member_path(@platform_stats['featured_member_username']) %>
+                  Challenge Wins: <strong><%= @platform_stats['featured_member_wins'].to_i %></strong><br/>
+                  Active Challenges: <strong><%= @platform_stats['featured_member_active'].to_i %></strong>
+                  <table class="type featured"><tr><td><%= number_to_currency(@platform_stats['featured_member_money'], :precision => 0) %></td></tr></table>
+                </div>
+            </div>
+        </div>        
+
+        <div class="title" style="margin-top:0px"><h1>RECENTLY SHARED</h1></div>
+        <div class="quotes slider res">
+            <div class="scrollable">
+                <div class="items">
+                    <div class="item"><div class="quote">I am a big fan of programming challenges, especially those that allow me to learn something new. When CloudSpokes came along a few months back, I did not know what to expect. Little did I know that as of today, I am completely infested with the "CloudSpokes" bug and make it a daily ritual to check out the site, blog, any new contests, any submission updates and much more. -- <a href="/members/romin">Romin</a></div></div>
+                    <div class="item"><div class="quote">I have learned more in this last year than I have in the last several combined!  I’ve had some really good competition, put together some awesome apps, and been blown away by some of the things I’ve seen other competitors put together. -- <a href="/members/kenji776">Kenji776</a></div></div>
+                    <div class="item"><div class="quote">It was purely by chance that I stumbled across CloudSpokes and the site’s headline struck a cord – “Participate in challenges, build a diverse portfolio, learn something new, and earn a little cash money on the side too.“ Not only would it give me a chance to brush up my coding skills, it would also provide an opportunity to pit myself against some of the best developers from all over the world. -- <a href="/members/talesforce">Talesforce</a></div></div>
+                </div>
+            </div>
+            <a href="#" class="prev"><span>Prev</span></a>
+            <a href="#" class="next"><span>Next</span></a>
+        </div>  
+
+        <%= render partial: "shared/happening_now" %>     		
 
     </div> <!-- /.container -->
 </div><!-- /.loginbar-wrapper -->
