added share this to member profile and partial

--- a/app/views/challenges/_right_share.html.erb
+++ b/app/views/challenges/_right_share.html.erb
@@ -1,17 +1,4 @@
-<h2>SHARE</h2>
-<p>
-<!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-<a class="addthis_button_preferred_1"></a>
-<a class="addthis_button_preferred_2"></a>
-<a class="addthis_button_preferred_3"></a>
-<a class="addthis_button_preferred_4"></a>
-<a class="addthis_button_compact"></a>
-<a class="addthis_counter addthis_bubble_style"></a>
-</div>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-5113b62254784963"></script>
-<!-- AddThis Button END -->
-</p>  
+<%= render partial: "shared/share_this" %>
 
 <h2>Chrome Extension</h2>
 <p>Install the <a href="https://chrome.google.com/webstore/detail/gdlkedihjlddoaplefphpmiibpnnpeap">CloudSpokes Chrome Extension</a> for quick and easy access to the latest
