added back invite friends and cleaned up mailers

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<%= render "template_top", :title => "Reset Your Password" %>
+<%= render "shared/mailer/template_top", :title => "Reset Your Password" %>
 
 <p>Hello <%= @resource.username %>!</p>
 
@@ -9,4 +9,4 @@
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
 
-<%= render "template_bottom" %>
+<%= render "shared/mailer/template_bottom" %>
