--- a/app/views/shared/_account_menu.html.erb
+++ b/app/views/shared/_account_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="span4 sidebar">
-    <h2>MY ACCOUNT SETTINGS</h2>
+    <h2>MY SETTINGS</h2>
     <%= build_menu('settings',selected_item) %>
 
     <h2>MY STUFF</h2>
@@ -8,6 +8,6 @@
     <h2>REFERRAL PROGRAM</h2>
     <%= build_menu('referral',selected_item) %>
 
-    <h2>MY SUBMISSIONS</h2>
+    <h2>SUBMISSIONS</h2>
     <%= build_menu('submissions',selected_item) %>
 </div>
