--- a/app/views/shared/mailer/_template_bottom.html.erb
+++ b/app/views/shared/mailer/_template_bottom.html.erb
@@ -4,7 +4,7 @@
 	The CloudSpokes Team<br/>
 	// Let's build it</p>
 		
-	<%= render "followus" %>
+	<%= render "shared/mailer/followus" %>
 
 	<p><a href="http://www.cloudspokes.com">http://www.cloudspokes.com</a></p>
 
