--- a/app/views/accounts/invite_friends.html.haml
+++ b/app/views/accounts/invite_friends.html.haml
@@ -1,13 +1,12 @@
 = content_wrapper do
   .span8
-    = content_tag :div, flash[:notice], class: "alert alert-success" if flash[:notice]
     .title
       %h1 INVITE YOUR FRIENDS
     %p Every time that someone you referred to CloudSpokes wins money, so will you! During their first year, you’ll earn 10% of all money that your friends win competing in CloudSpokes challenges. So if a friend wins $1000 in a coding challenge, we’ll give you an additional $100.
 
     %p Refer as many friends as you like. Here’s your invite code for you to give out:
 
-    - url = ref_siginup_url(username: current_user.username)
+    - url = "#{ENV['WEBSITE_URL']}/signup/#{current_user.username}"
     %h1= link_to url, url
     %br
     %p Send invites to your friends using the handy invite form below.
