--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,4 +1,4 @@
-<%= render "template_top", :title => "Unlock Instructions" %>
+<%= render "shared/mailer/template_top", :title => "Unlock Instructions" %>
 
 <p>Hello <%= @resource.username %>!</p>
 
@@ -8,4 +8,4 @@
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, :unlock_token => @resource.unlock_token) %></p>
 
-<%= render "template_bottom" %>
+<%= render "shared/mailer/template_bottom" %>
