added page titles

--- a/app/views/challenges/participants.html.erb
+++ b/app/views/challenges/participants.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title>Participants - CloudSpokes</title><% end %>
+
 <!-- CONTENT
         ================================================== -->
 <div class="content-wrapper">
