--- a/app/views/challenges/results_scorecard.html.erb
+++ b/app/views/challenges/results_scorecard.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title>Participant Scorecard - CloudSpokes</title><% end %>
+
 <%= javascript_include_tag "scorecard" %>
 
 <script type="text/javascript">
