--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title><%= @challenge.name %> - CloudSpokes</title><% end %>
+
 <div class="content-wrapper">
   <div class="container">
 
