--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title><%= @community.community.name %> Community - CloudSpokes</title><% end %>
+
 <%= content_wrapper do %>
 
   <div class="title"><h1><%= @community.community.name.upcase %> COMMUNITY</h1></div>
