--- a/app/views/judging/judging_queue.html.erb
+++ b/app/views/judging/judging_queue.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title>Judging Queue - CloudSpokes</title><% end %>
+
 <script type="text/javascript">
 function signup(challenge_id) {
     var id = "signup-"+challenge_id;
