--- a/app/views/judging/outstanding_reviews.html.erb
+++ b/app/views/judging/outstanding_reviews.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title>Outstanding Reviews - CloudSpokes</title><% end %>
+
 <!-- CONTENT
         ================================================== -->
 <div class="content-wrapper">
