--- a/app/views/members/past_challenges.html.erb
+++ b/app/views/members/past_challenges.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title>Past Challenges - CloudSpokes</title><% end %>
+
 <!-- CONTENT
         ================================================== -->
 <div class="content-wrapper">
