--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title>Member Profile: <%= @member.name %> - CloudSpokes</title><% end %>
+
 <!-- CONTENT
         ================================================== -->
 <script>
