--- a/app/views/challenges/results.html.erb
+++ b/app/views/challenges/results.html.erb
@@ -1,3 +1,5 @@
+<% content_for :head do %><title>Challenge Results - CloudSpokes</title><% end %>
+
 <!-- CONTENT
         ================================================== -->
 <div class="content-wrapper">
