added dalli for caching

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="google-site-verification" content="0b5UAqY-jFcSFdwuJOMT6arbK7RxdSzR-utYf1Pe6_k" />
-    <meta name="description" content="CloudSpokes matches companies who need cloud development expertise with a worldwide, crowdsourced community of <%= number_with_delimiter(@platform_stats['members'], :delimiter => ',') %> cloud experts.">    
+    <meta name="description" content="CloudSpokes matches companies who need cloud development expertise with a worldwide crowdsourced community of <%= number_with_delimiter(@platform_stats['members'], :delimiter => ',') %> cloud experts.">    
     <% if content_for?(:head) %>
       <%= content_for(:head) %>
     <% else %>
