--- a/app/views/challenges/participants.html.erb
+++ b/app/views/challenges/participants.html.erb
@@ -7,7 +7,11 @@
 
         <div class="title"><h1>PARTICIPANTS</h1></div>
 
-        <% @challenge.participants.in_groups_of(3, false) do |row_participants| %>
+        <% if @participants.empty? %>
+            <div align="center"><strong>There are currently no participants for this challenge.</strong></div>
+        <% end %>        
+
+        <% @participants.in_groups_of(3, false) do |row_participants| %>
         <div class="row-fluid">
             <% for p in row_participants %> 
             <div class="span4">
