--- a/app/views/challenges/register.html.erb
+++ b/app/views/challenges/register.html.erb
@@ -7,7 +7,7 @@
                 <div class="title"><h1>TERMS OF SERVICE</h1></div>
                 <p><strong>You must agree to the terms and conditions of this challenge before competing.</strong></p>
                 <%= raw(@terms['terms']) %>
-                <p><br/><a class="btn" href="<%= agreetos_challenge_path(params[:id]) %>"><span>Agree & Register</span></a></p>
+                <p><br/><a class="btn" href="<%= agree_tos_challenge_path(params[:id]) %>"><span>Agree & Register</span></a></p>
 						</div>
 
 
