--- a/app/views/challenges/_search_form.html.haml
+++ b/app/views/challenges/_search_form.html.haml
@@ -3,14 +3,13 @@
     .span12
       = text_field_tag "search[query]", search_options[:query], placeholder: "Enter keywords here", class: "query span6"
       = submit_tag "Search", class: "btn btn-primary"
-      = link_to "Search Options", "#", class: "toggle-options"
   .options
     .row
       .status.radios.span2
         %h5 Challenge Status:
         = search_radio_button :state, "open"
         = search_radio_button :state, "closed"
-      .sort-order.span2
+      .sort-order.span3
         %h5 Sort Order:
         = search_radio_button :order, "asc"
         = search_radio_button :order, "desc"
@@ -24,15 +23,25 @@
         = search_radio_button :sort_by, "challenge_type"
 
     .row
-      .categories.span12
+      .categories.span2
         %h5 Categories:
-        - Challenge.redis_all_category_names.each do |cat|
+        - @categories.each do |cat|
           = search_checkbox :categories, cat.downcase
+
+      .categories.span3
+        %h5 Platforms:
+        - @platforms.each do |plat|
+          = search_checkbox :categories, plat.downcase
+
+      .categories.span7
+        %h5 Technologies:
+        - @technologies.each do |tech|
+          = search_checkbox :categories, tech.downcase          
 
     .row
       .community.span3
         %h5 Community:
-        = select_tag "search[community]", options_for_select(Challenge.redis_all_community_names, search_options[:community]), prompt: "Any Community", class: "chosen"
+        = select_tag "search[community]", options_for_select(@communities, search_options[:community]), prompt: "Any Community", class: "chosen"
       .prize-money.span3
         %h5 Prize Money:
         = text_field_tag "search[prize_money][min]", search_options[:prize_money][:min], class: "prize-money", placeholder: "Min"
